--- a/client/src/main/webapp/index.html
+++ b/client/src/main/webapp/index.html
@@ -103,7 +103,7 @@
                 </div>
             </div>
             <div id="task-container" class="span9">
-                <h2>Tasks</h2>
+                <h2>Tasks <small id="clearFilter">remove filter</small></h2>
                 <div class="add-task task"><i class="icon-plus-sign"></i> Add Task</div>
                 <div class="add-task-form task">
                     <form id="add-task" name="task">
