--- a/client/src/main/webapp/index.html
+++ b/client/src/main/webapp/index.html
@@ -307,7 +307,7 @@
     <script>window.jQuery || document.write( '<script src="js/libs/jquery.min.js"><\/script>' )</script>
     <script src="js/libs/bootstrap.min.js"></script>
     <script src="js/libs/lodash.min.js"></script>
-    <script src="js/libs/aerogear.js"></script>
+    <script src="js/libs/aerogear.min.js"></script>
     <script src="js/libs/jquery.miniColors.min.js"></script>
     <script src="js/libs/jquery.maskedinput-1.3.min.js"></script>
     <script src="js/app.js"></script>
